# xyz_2st_project

./: .gitignore  .requirment  README.md  collberate_robot.py  fuel_progress_screen.dart  license_plate.py  ocr.py
install/: local_setup.sh  setup.sh
install/fuel_interfaces/share/fuel_interfaces/: package.bash  package.zsh
log/: latest_build
mulit_model/: camera_plate_ocr.py
sample/: license_plate.py  ocr.py  ocr_img.py  ocr_video.py  ocr_yolo.py  ocr_yolo_1.py  ocr_yolo_2.py  ocr_yolo_3.py  requirements.txt  ros_ocr_yolo_publisher.py  yolo_ocr_publisher_1.py  yolo_ocr_publisher_2.py  yolo_ocr_publisher_3.py
sample/mnist_train/: prdict_mnist.py  predict+mnist.py  train_mnist.py
sample/mulit_model/: camera_plate_ocr_1.py  multimodal_policy.py
src/fuel_interfaces/: CMakeLists.txt  package.xml
src/fuel_interfaces/msg/msg/: FuelCommand.msg
src/fuel_voice/: package.xml  setup.cfg  setup.py
src/fuel_voice/fuel_voice/: fuel_command_parser.py
