<?xml version="1.0"?>
<package format="3">
  <name>fuel_interfaces</name>
  <version>0.0.0</version>
  <description>Interface package for fuel-related messages</description>

  <maintainer email="youremail@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 메시지 생성 관련 의존성 -->
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- rosidl 인터페이스 패키지 그룹 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- 테스트용 의존성 (CMake에서 ament_lint_auto_find_test_dependencies() 쓰고 있으니까) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

</package>
